[package]
name = "flint"
version = "0.1.0"
authors = ["Ash Walker <ash@ashwalker.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.19"
lightcycle = { git = "https://github.com/SignalWalker/LightCycle" }
collada = "^0.11"
image = "^0.21"
ash = "^0.29"
spirv_cross = {version = "^0.15", features = ["glsl"]}
shaderc = "^0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = "0.6"
cocoa = "0.13"
objc = "0.2.2"